--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "antd": "^4.21.5",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.2",
