--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/index.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/index.js", "utilities/nextAuth-clientPromise.js", "pages/api/auth/[...nextauth].js"],
   "exclude": ["node_modules"]
 }
