--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.3",
     "antd": "^4.21.5",
+    "chart.js": "^3.8.0",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.2",
     "next": "12.2.0",
