--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/mongodb-adapter": "^1.0.3",
     "antd": "^4.21.5",
     "chart.js": "^3.8.0",
+    "moment": "^2.29.4",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.2",
     "next": "12.2.0",
