--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/node": "18.0.1",
