--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "@types/react": "^18.0.14",
     "antd": "^4.21.5",
     "chart.js": "^3.8.0",
     "moment": "^2.29.4",
