--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.3.0",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@types/react": "^18.0.14",
     "antd": "^4.21.5",
