--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.14",
     "antd": "^4.21.5",
     "chart.js": "^3.8.0",
+    "millify": "^5.0.0",
     "moment": "^2.29.4",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.2",
